--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -28,9 +28,9 @@
     --destructive: 0 84.2% 60.2%;
     --destructive-foreground: 0 0% 98%;
 
-    --border:240 5.9% 90%;
-    --input:240 5.9% 90%;
-    --ring:142.1 76.2% 36.3%;
+    --border: 240 5.9% 90%;
+    --input: 240 5.9% 90%;
+    --ring: 142.1 76.2% 36.3%;
     --radius: 0.5rem;
 
     --chart-1: 12 76% 61%;
@@ -46,35 +46,36 @@
     --sidebar-accent: 240 4.8% 95.9%;
     --sidebar-accent-foreground: 240 5.9% 10%;
     --sidebar-border: 220 13% 91%;
-    --sidebar-ring: 217.2 91.2% 59.8%}
+    --sidebar-ring: 217.2 91.2% 59.8%;
+  }
   .dark {
-    --background:20 14.3% 4.1%;
-    --foreground:0 0% 95%;
+    --background: 20 14.3% 4.1%;
+    --foreground: 0 0% 95%;
 
-    --card:24 9.8% 10%;
-    --card-foreground:0 0% 95%;
+    --card: 24 9.8% 10%;
+    --card-foreground: 0 0% 95%;
 
-    --popover:0 0% 9%;
-    --popover-foreground:0 0% 95%;
+    --popover: 0 0% 9%;
+    --popover-foreground: 0 0% 95%;
 
-    --primary:142.1 70.6% 45.3%;
-    --primary-foreground:144.9 80.4% 10%;
+    --primary: 142.1 70.6% 45.3%;
+    --primary-foreground: 144.9 80.4% 10%;
 
-    --secondary:240 3.7% 15.9%;
-    --secondary-foreground:0 0% 98%;
+    --secondary: 240 3.7% 15.9%;
+    --secondary-foreground: 0 0% 98%;
 
-    --muted:0 0% 15%;
-    --muted-foreground:240 5% 64.9%;
+    --muted: 0 0% 15%;
+    --muted-foreground: 240 5% 64.9%;
 
-    --accent:12 6.5% 15.1%;
-    --accent-foreground:0 0% 98%;
+    --accent: 12 6.5% 15.1%;
+    --accent-foreground: 0 0% 98%;
 
-    --destructive:0 62.8% 30.6%;
-    --destructive-foreground:0 85.7% 97.3%;
+    --destructive: 0 62.8% 30.6%;
+    --destructive-foreground: 0 85.7% 97.3%;
 
-    --border:240 3.7% 15.9%;
-    --input:240 3.7% 15.9%;
-    --ring:142.4 71.8% 29.2%;
+    --border: 240 3.7% 15.9%;
+    --input: 240 3.7% 15.9%;
+    --ring: 142.4 71.8% 29.2%;
 
     --chart-1: 220 70% 50%;
     --chart-2: 160 60% 45%;
@@ -89,7 +90,8 @@
     --sidebar-accent: 240 3.7% 15.9%;
     --sidebar-accent-foreground: 240 4.8% 95.9%;
     --sidebar-border: 240 3.7% 15.9%;
-    --sidebar-ring: 217.2 91.2% 59.8%}
+    --sidebar-ring: 217.2 91.2% 59.8%;
+  }
 }
 @layer base {
   * {
