try fixing styling bug due to css styles coming along with vuetify installation

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -117,3 +117,11 @@
     --greensign-900: 168 95% 14%; /* #014737 */
   }
 }
+@layer base {
+  * {
+    @apply border-border;
+  }
+  body {
+    @apply bg-background text-foreground;
+  }
+}
