--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -62,6 +62,7 @@
 
     --v-theme-overlay: transparent;
     --v-theme-overlay-multiplier: 1;
+    --v-hover-opacity: 0.9;
   }
   .dark {
     --background: 240 10% 3.9%;
